tests/test_files/valid/scheduling/on_done_task.pfdl
# Copyright The MF-Plugin Contributors
#
# Licensed under the MIT License.
# For details on the licensing terms, see the LICENSE file.
# SPDX-License-Identifier: MIT

Location warehouse1
    id: "0x4711"
    type: "pallet"
End

Location warehouse2
    id: "0x4711"
    type: "pallet"
End

Location production1
    id: "0x4712"
    type: "pallet"
End

TransportOrderStep tosWarehouse1
    Location warehouse1
    OnDone helloWorld2
End

TransportOrderStep tosWarehouse2
    Location warehouse2
End

TransportOrderStep tosProduction1
    Location production1
End

Task mainTask
    helloWorld
End

Task helloWorld
    Transport
    From tosWarehouse1
    To tosProduction1
End

Task helloWorld2
    Transport
    From tosWarehouse2
    To tosProduction1
End
